--- a/hello.html
+++ b/hello.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <title>Hello</title>
-
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <h2>Hello!</h2>
-    <h1 style="color: blue">Welcome to my website</h1>
+
+
+    <h1>Welcome to my website</h1>
+
+   
+
 
     Hello, world!
 </body>
 </html>
+
